<resources>
    <string name="app_name">Weather App</string>
    <string name="city">Город</string>
    <string name="country">Страна</string>
    <string name="temperature">Температура</string>
    <string name="pressure">Давление</string>
    <string name="humidity">Влажность</string>
    <string name="wind_speed">Скорость ветра</string>
    <string name="refresh">Обновить</string>
</resources>
